--- a/templates/user.html
+++ b/templates/user.html
@@ -26,7 +26,9 @@
 {% block content %}
 <div class="container">
     <div class="page-header">
-        <h1>Hello, {{ name }}!</h1>
+        <h1>Hello, {{ politicians[0] }}!</h1>
+        <h1>Hello, {{ politicians[1] }}!</h1>
+
     </div>
 </div>
 {% endblock %}
