added sample form

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,11 @@
 
 {% block title %}Flasky{% endblock %}
 
+{% block head %}
+{{ super() }}
+
+{% endblock %}
+
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
     <div class="container">
@@ -25,10 +30,11 @@
 
 {% block content %}
 <div class="container">
-    <div class="page-header">
-        <h1>Hello, {{ politicians[0] }}!</h1>
-        <h1>Hello, {{ politicians[1] }}!</h1>
-
-    </div>
+    {% block page_content %}{% endblock %}
 </div>
 {% endblock %}
+
+{% block scripts %}
+{{ super() }}
+{% endblock %}
+
